# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: README.md  hexlet-check.yml  lint_check.yml  run_tests.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: helpers.py  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_task.json  test_user.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_rename_created_date_task_date_created.py  0003_alter_task_labels_alter_tasklabelrelation_task.py  0003_alter_task_name.py  (+1 more)
task_manager/templates/: 404.html  base.html  footer.html  form.html  index.html  navbar.html
task_manager/users/: apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+26 files in other folders)
